TTRHBuilder and other cfi files

--- a/test/GlobalMuonProducer.cfg
+++ b/test/GlobalMuonProducer.cfg
@@ -1,42 +1,24 @@
-process GlobalMuonProduction = {
+process GlobalRECO = {
 
-# Event source
-	source = PoolSource{
- 		untracked vstring fileNames ={'file:STAMuons.root'}
- 		untracked int32 maxEvents = -1
- 		untracked uint32 debugVebosity = 10
-  		untracked bool   debugFlag     = true
-	}
+  # Event source
+  source = PoolSource{
+    untracked vstring fileNames ={"file:reco.root"}
+    untracked int32 maxEvents = -1
+  }
 
+  # MessageLogger
+  include "FWCore/MessageLogger/data/MessageLogger.cfi"
+  replace MessageLogger.cout.threshold = "DEBUG"
 
-# Messages
-	service = MessageLogger {
-		untracked vstring destinations = { "cout" }
-		untracked PSet cout = {
-			untracked bool noLineBreaks = true 
-			untracked string threshold = "INFO"
-		}
-        }
+  include "RecoMuon/GlobalMuonProducer/data/GlobalMuonProducer.cff"
 
-
-# Magnetic Field
-        include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
-
-
-# Geometries
-	include "Geometry/CMSCommonData/data/cmsIdealGeometryXML.cfi" 
-	include "Geometry/CommonDetUnit/data/bareGlobalTrackingGeometry.cfi"
-
-# Global muon producer
-	include "RecoMuon/GlobalMuonProducer/data/GlobalMuonProducer.cff"
-
-
-# Output
-	module out = PoolOutputModule {
-		untracked string fileName ="GLBMuons.root"
-	}
+  # Output
+  module out = PoolOutputModule {
+    untracked string fileName ="GLBMuons.root"
+  }
 
 # Path
-	path p = {GlobalMuon}
-	endpath this_is_the_end = {out}
+  path p = { GlobalMuonProducer }
+  endpath this_is_the_end = { out }
+
 }
