add PSet and move duplicate .cfi

--- a/test/GlobalMuonProducer.cfg
+++ b/test/GlobalMuonProducer.cfg
@@ -10,6 +10,14 @@ process GlobalRECO = {
   include "FWCore/MessageLogger/data/MessageLogger.cfi"
   replace MessageLogger.cout.threshold = "DEBUG"
 
+  # include "Geometry/CMSCommonData/data/cmsRecoIdealGeometryXML.cfi"
+  # es_module = MuonDetLayerGeometryESProducer { }
+  es_module module4globalmuons = Chi2MeasurementEstimatorESProducer {
+     string ComponentName = "Chi2MeasurementEstimator"
+     double MaxChi2 = 25.
+     double nSigma = 3.
+ }
+
   include "RecoMuon/GlobalMuonProducer/data/GlobalMuonProducer.cff"
 
   # Output
