--- a/test/GlobalMuonProducer.cfg
+++ b/test/GlobalMuonProducer.cfg
@@ -2,15 +2,13 @@ process GlobalRECO = {
 
   # Event source
   source = PoolSource{
-    untracked vstring fileNames ={"file:STAMuonsProxy.root"}
+    untracked vstring fileNames ={"file:reco.root"}
     untracked int32 maxEvents = -1
   }
 
   # MessageLogger
-#  include "FWCore/MessageLogger/data/MessageLogger.cfi"
-#  replace MessageLogger.cout.threshold = "DEBUG"
-
-    include "RecoMuon/StandAloneMuonProducer/test/debug.cfi" 
+  include "FWCore/MessageLogger/data/MessageLogger.cfi"
+  replace MessageLogger.cout.threshold = "DEBUG"
 
   # include "Geometry/CMSCommonData/data/cmsRecoIdealGeometryXML.cfi"
   # es_module = MuonDetLayerGeometryESProducer { }
