--- a/test/GlobalMuonProducer.cfg
+++ b/test/GlobalMuonProducer.cfg
@@ -26,7 +26,7 @@ process GlobalRECO = {
   }
 
 # Path
-  path p = { GlobalMuonProducer }
+  path p = { globalMuons }
   endpath this_is_the_end = { out }
 
 }
