--- a/test/GlobalMuonProducer.cfg
+++ b/test/GlobalMuonProducer.cfg
@@ -2,7 +2,7 @@ process GlobalRECO = {
 
   # Event source
   source = PoolSource{
-    untracked vstring fileNames ={"file:reco.root"}
+    untracked vstring fileNames ={"file:data/reco.root"}
     untracked int32 maxEvents = -1
   }
 
@@ -16,15 +16,31 @@ process GlobalRECO = {
      double nSigma = 3.
   }
 
-  include "RecoMuon/GlobalMuonProducer/data/globalMuons.cff"
+  #include "RecoMuon/GlobalMuonProducer/data/globalMuons.cff"
+
+  #include "Configuration/StandardSequences/data/Reconstruction.cff"
+  include "RecoMuon/Configuration/data/RecoMuon.cff"
+
+  #replace siPixelClusters.MissCalibrate = false
+  #replace siPixelRecHits.Alpha2Order    = false
+  #replace ctfWithMaterialTracks.TrajectoryInEvent = false
+  replace standAloneMuons.TrackLoaderParameters.PutTrajectoryIntoEvent = true
+  replace globalMuons.MuonTrajectoryAvailable = true
+  replace globalMuons.GLBTrajBuilderParameters.TkTrajectoryAvailable = false
+
+  # L3 Muons
+  include "RecoMuon/L3MuonProducer/data/L3Muons.cfi"
+  replace L3Muons.MuonCollectionLabel = "standAloneMuons"
+  replace L3Muons.MuonTrajectoryAvailable = true
 
   # Output
   module out = PoolOutputModule {
-    untracked string fileName ="GLBMuons.root"
+    untracked string fileName ="data/GLBMuons.root"
   }
 
   # Path
-  path p = { globalMuons }
+  #path p = { globalMuons }
+  path p = { muonreco, L3Muons }
   endpath this_is_the_end = { out }
 
 }
