--- a/test/GlobalMuonValidator.cfg
+++ b/test/GlobalMuonValidator.cfg
@@ -1,7 +1,8 @@
 process eff = {
 
      source = PoolSource { 
-          untracked vstring fileNames = {"file:reco.root"}
+          untracked vstring fileNames = {"file:data/reco.root"}
+#          untracked vstring fileNames = {"file:data/GLBMuons.root"}
           untracked int32 maxEvents = -1
      }
 
@@ -36,9 +37,9 @@ process eff = {
           int32   partId= 13 #-13
           untracked InputTag  STAtracks = standAloneMuons
           untracked InputTag  TKtracks = ctfWithMaterialTracks
-          untracked InputTag  Muons = globalMuons
+          untracked InputTag  Muons = L3Muons
           untracked InputTag  SIMtracks  = g4SimHits
-          string  out   = "GlobalValidator.root"
+          string  out   = "L3Validator.root"
           string  open  = "recreate"
 	  double  PtCut = 1.0
           double  simPtMin    = 5.0
