--- a/test/GlobalMuonProducer.cfg
+++ b/test/GlobalMuonProducer.cfg
@@ -1,46 +1,41 @@
 process GlobalRECO = {
-
-  # Event source
-  source = PoolSource{
-    untracked vstring fileNames ={"file:data/reco.root"}
-    untracked int32 maxEvents = -1
-  }
-
-  # MessageLogger
-  include "FWCore/MessageLogger/data/MessageLogger.cfi"
-  replace MessageLogger.cout.threshold = "DEBUG"
-
-  es_module module4globalmuons = Chi2MeasurementEstimatorESProducer {
-     string ComponentName = "Chi2MeasurementEstimator"
-     double MaxChi2 = 25.
-     double nSigma = 3.
-  }
-
-  #include "RecoMuon/GlobalMuonProducer/data/globalMuons.cff"
-
-  #include "Configuration/StandardSequences/data/Reconstruction.cff"
-  include "RecoMuon/Configuration/data/RecoMuon.cff"
-
-  #replace siPixelClusters.MissCalibrate = false
-  #replace siPixelRecHits.Alpha2Order    = false
-  #replace ctfWithMaterialTracks.TrajectoryInEvent = false
-  replace standAloneMuons.TrackLoaderParameters.PutTrajectoryIntoEvent = true
-  replace globalMuons.MuonTrajectoryAvailable = true
-  replace globalMuons.GLBTrajBuilderParameters.TkTrajectoryAvailable = false
-
-  # L3 Muons
-  include "RecoMuon/L3MuonProducer/data/L3Muons.cfi"
-  replace L3Muons.MuonCollectionLabel = "standAloneMuons"
-  replace L3Muons.MuonTrajectoryAvailable = true
-
-  # Output
-  module out = PoolOutputModule {
-    untracked string fileName ="data/GLBMuons.root"
-  }
-
-  # Path
-  #path p = { globalMuons }
-  path p = { muonreco, L3Muons }
-  endpath this_is_the_end = { out }
-
+    
+    # Event source
+    source = PoolSource{
+	untracked vstring fileNames ={"file:reco.root"}
+	untracked int32 maxEvents = -1
+    }
+    
+    # MessageLogger
+    include "FWCore/MessageLogger/data/MessageLogger.cfi"
+    replace MessageLogger.cout.threshold = "DEBUG"
+    
+    es_module module4globalmuons = Chi2MeasurementEstimatorESProducer {
+	string ComponentName = "Chi2MeasurementEstimator"
+	double MaxChi2 = 25.
+	double nSigma = 3.
+    }
+    
+   #include "Configuration/StandardSequences/data/Reconstruction.cff"
+    include "RecoMuon/Configuration/data/RecoMuon.cff"
+    
+   #replace siPixelClusters.MissCalibrate = false
+   #replace siPixelRecHits.Alpha2Order    = false
+   #replace ctfWithMaterialTracks.TrajectoryInEvent = true
+    replace standAloneMuons.TrackLoaderParameters.PutTrajectoryIntoEvent = true
+    replace globalMuons.MuonTrajectoryAvailable = true
+    replace globalMuons.GLBTrajBuilderParameters.TkTrajectoryAvailable = false
+    
+    # Output
+    module out = PoolOutputModule {
+	untracked string fileName ="GLBMuons.root"
+    }
+    
+    # Path
+    sequence localreco = {trackerlocalreco, muonlocalreco}
+    sequence globalreco = {ckftracks, muonreco}
+    #path p = { localreco, globalreco }
+    path p = { muonreco }   
+    endpath this_is_the_end = { out }
+    
 }
