--- a/test/GlobalMuonProducer.cfg
+++ b/test/GlobalMuonProducer.cfg
@@ -1,41 +1,24 @@
 process GlobalRECO = {
-    
-    # Event source
-    source = PoolSource{
-	untracked vstring fileNames ={"file:reco.root"}
-	untracked int32 maxEvents = -1
-    }
-    
-    # MessageLogger
-    include "FWCore/MessageLogger/data/MessageLogger.cfi"
-    replace MessageLogger.cout.threshold = "DEBUG"
-    
-    es_module module4globalmuons = Chi2MeasurementEstimatorESProducer {
-	string ComponentName = "Chi2MeasurementEstimator"
-	double MaxChi2 = 25.
-	double nSigma = 3.
-    }
-    
-   #include "Configuration/StandardSequences/data/Reconstruction.cff"
-    include "RecoMuon/Configuration/data/RecoMuon.cff"
-    
-   #replace siPixelClusters.MissCalibrate = false
-   #replace siPixelRecHits.Alpha2Order    = false
-   #replace ctfWithMaterialTracks.TrajectoryInEvent = true
-    replace standAloneMuons.TrackLoaderParameters.PutTrajectoryIntoEvent = true
-    replace globalMuons.MuonTrajectoryAvailable = true
-    replace globalMuons.GLBTrajBuilderParameters.TkTrajectoryAvailable = false
-    
-    # Output
-    module out = PoolOutputModule {
-	untracked string fileName ="GLBMuons.root"
-    }
-    
-    # Path
-    sequence localreco = {trackerlocalreco, muonlocalreco}
-    sequence globalreco = {ckftracks, muonreco}
-    #path p = { localreco, globalreco }
-    path p = { muonreco }   
-    endpath this_is_the_end = { out }
-    
+
+  # Event source
+  source = PoolSource{
+    untracked vstring fileNames ={"file:reco.root"}
+    untracked int32 maxEvents = -1
+  }
+
+  # MessageLogger
+  include "FWCore/MessageLogger/data/MessageLogger.cfi"
+  replace MessageLogger.cout.threshold = "DEBUG"
+
+  include "RecoMuon/GlobalMuonProducer/data/GlobalMuonProducer.cff"
+
+  # Output
+  module out = PoolOutputModule {
+    untracked string fileName ="GLBMuons.root"
+  }
+
+# Path
+  path p = { GlobalMuonProducer }
+  endpath this_is_the_end = { out }
+
 }
