--- a/test/GlobalMuonProducer.cfg
+++ b/test/GlobalMuonProducer.cfg
@@ -3,14 +3,13 @@ process GlobalRECO = {
     # Event source
     source = PoolSource{
 	untracked vstring fileNames = {
-            'rfio:/castor/cern.ch/user/a/aeverett/Samples/CMSSW_1_5_0/single_mu_pt_5_200_positive_150.root'
+	    '/store/mc/2007/8/10/RelVal-RelVal160pre9SingleMuMinusPt100-CMSSW_1_6_0_pre9-1186773613/0000/521A11A5-E447-DC11-A52B-003048767EFD.root'
         }
     }
     untracked PSet maxEvents = {untracked int32 input = 10}
     
     # MessageLogger
     include "FWCore/MessageLogger/data/MessageLogger.cfi"
-    replace MessageLogger.cout.threshold = "DEBUG"
     
     include "Configuration/StandardSequences/data/FakeConditions.cff"
     include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
